2004-12-27 Randy McMurchy <randy@linuxfromscratch.org>
	* Changed Exim bootscript to start the daemon with -q15m instead
	  of -q1m.

2004-11-21 Igor Zivkovic <igor@linuxfromscratch.org>
	* Removed setclock symlinks at install-ntp target and added a
	  substitute command in the book.

2004-10-27 Randy McMurchy <randy@linuxfromscratch.org>
	* Added new bootscript for Stunnel.

2004-10-23 Randy McMurchy <randy@linuxfromscratch.org>
	* Modified PostgreSQL script because the pg_ctl script
	  is no longer able to run as user root.

2004-10-20 DJ Lucas <dj@linuxfromscratch.org>
	* Added ability to print assigned addresses when using
	  dhcpcd service script.

2004-10-13 Igor Zivkovic <igor@linuxfromscratch.org>
	* Added ntpd -gqx to ntp bootscript start case to set
	  the initial time (Thomas Trepl)
	* Added setclock stop symlinks to runlevels 0, 1, 2
	  and 6 on install-ntp target to write the system time
	  back to hardware clock (Jeremy Utley)

2004-10-11 DJ Lucas <dj@linuxfromscratch.org>
	* Fixed multiple errors in nfs-server bootscript
	* Removed lockd from nfs-client bootscript
	* Added svn keywords to remaining bootscripts

2004-10-02 DJ Lucas <dj@linuxfromscratch.org>
	* Changed all scripts to use full path names

2004-09-28 DJ Lucas <dj@linuxfromscratch.org>
	* Replaced nfs-server and nfs-client scripts
	* Adjusted mysql and winbind scripts to use PIDFILE
	* Added svn keywords to remaining bootscripts

2004-08-26 Randy McMurchy <randy@linuxfromscratch.org>
	* Removed usb script (suggested by Alexander Patrakov)

2004-08-06 Randy McMurchy <randy@linuxfromscratch.org>
	* Added openldap (slapd and slurpd startup) scripts

2004-08-05 Randy McMurchy <randy@linuxfromscratch.org>
	* Added cyrus-sasl (Cyrus SASL authdaemon) script 

2004-08-03 DJ Lucas <dj@linuxfromscratch.org>
	* Added MODE and DIRMODE variables to set 
	  permissions of installed scripts and 
	  directories
	* Corrected script to remove svn directories
	  when creating release tarball
